<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ekta.myappportfolio.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:fillViewport="true">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/apps_Details"
            android:textSize="25dp"
            android:textColor="@color/colorBlack"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnPopularMovies"
            android:text="@string/popular_movies"
            style="@style/ButtonStyle"
            />
        <Button
            android:id="@+id/btnStockHawk"
            android:text="@string/stock_hawk"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/btnBuildItBigger"
            android:text="@string/build_it_bigger"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/btnMakeYourAppMaterial"
            android:text="@string/make_your_app_material"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/btnGoUbiquitous"
            android:text="@string/go_ubiquitous"
            style="@style/ButtonStyle"/>
        <Button
            android:id="@+id/btnCapstone"
            android:text="@string/capstone"
            style="@style/ButtonStyle"
            />
    </LinearLayout>
  </ScrollView>
</FrameLayout>